--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nyc_covid_map",
   "version": "0.1.0",
+  "main": "src/index.js",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -13,7 +14,9 @@
     "react-dropdown": "^1.9.2",
     "react-scripts": "4.0.3",
     "topojson": "^3.0.2",
-    "web-vitals": "^1.0.1"
+    "use-iframe": "^1.0.4",
+    "web-vitals": "^1.0.1",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
